cmake: support OSS Fuzz
The patch enables parts of code related to coverage-guided fuzzing
when CMake option OSS_FUZZ is enabled, fixes libFuzzer library
name used for building Tarantool and introduces a CMake option
ENABLE_LIBFUZZER_STATIC_LINKAGE that controls linkage mode with
fuzzing engine.

Follows up the commit 3467991c2323 ("test/fuzz: support Lua
coverage-guided testing") and commit e7b6b8b88ca8
("cmake: integrate Lua API tests").

See also #11250
See also google/oss-fuzz#13782
Part of #12097

NO_CHANGELOG=build
NO_DOC=build
NO_TEST=build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -357,7 +357,7 @@ if (EXPORT_LIBCURL_SYMBOLS)
         ${PROJECT_SOURCE_DIR}/extra/exports_libcurl)
 endif()
 
-if (ENABLE_FUZZER AND NOT OSS_FUZZ)
+if (ENABLE_FUZZER AND ENABLE_LIBFUZZER_STATIC_LINKAGE)
     include(LibFuzzer)
     set(libfuzzer_exports ${PROJECT_BINARY_DIR}/extra/exports_libfuzzer)
     BuildLibFuzzerSymbols(${libfuzzer_exports})
@@ -390,7 +390,7 @@ set_target_properties(tarantool PROPERTIES LINK_DEPENDS ${exports_file})
 # TODO(gh-7424): Autogenerate the list of internal symbols.
 add_library(symbols STATIC symbols.c)
 
-if (ENABLE_FUZZER AND NOT OSS_FUZZ)
+if (ENABLE_FUZZER AND ENABLE_LIBFUZZER_STATIC_LINKAGE)
     SetLibFuzzerObjFiles(LIBFUZZER_OBJECTS)
     target_link_libraries(symbols ${LIBFUZZER_OBJECTS})
 endif()
