build: add CMakePresets.json files
Added CMakePresets.json files to conveniently integrate different build
configurations with IDE plugins and command line. Currently not
available for static-builds.

```sh
cmake --list-presets=all
```
```sh
Available configure presets:

  "gcc_debug"          - GCC Debug
  "gcc_release"        - GCC Release
  "gcc_debug_asan"     - GCC Debug ASAN
  "gcc_release_asan"   - GCC Release ASAN
  "clang_debug"        - Clang Debug
  "clang_release"      - Clang Release
  "clang_debug_asan"   - Clang Debug ASAN
  "clang_release_asan" - Clang Release ASAN

Available build presets:

  "gcc_debug"          - GCC Debug
  "gcc_release"        - GCC Release
  "gcc_debug_asan"     - GCC Debug ASAN
  "gcc_release_asan"   - GCC Release ASAN
  "clang_debug"        - Clang Debug
  "clang_release"      - Clang Release
  "clang_debug_asan"   - Clang Debug ASAN
  "clang_release_asan" - Clang Release ASAN

Available test presets:

  "gcc_debug"          - GCC Debug
  "gcc_release"        - GCC Release
  "gcc_debug_asan"     - GCC Debug ASAN
  "gcc_release_asan"   - GCC Release ASAN
  "clang_debug"        - Clang Debug
  "clang_release"      - Clang Release
  "clang_debug_asan"   - Clang Debug ASAN
  "clang_release_asan" - Clang Release ASAN

Available workflow presets:

  "gcc_debug"          - GCC Debug
  "gcc_release"        - GCC Release
  "gcc_debug_asan"     - GCC Debug ASAN
  "gcc_release_asan"   - GCC Release ASAN
  "clang_debug"        - Clang Debug
  "clang_release"      - Clang Release
  "clang_debug_asan"   - Clang Debug ASAN
  "clang_release_asan" - Clang Release ASAN
```

CLI usage examples:
1. Configure with specific configuration:
```sh
cmake --preset gcc_debug
```

2. Build configured project:
```sh
cmake --build --preset gcc_debug
```

3. Launch workflow, aka configure + build + ctest:
```sh
cmake --workflow --preset gcc_debug
```

Can also be used as a plugin for your IDE of choice, which will allow
you to build different configurations

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -52,6 +52,12 @@ jobs:
         with:
           fetch-depth: 0
           submodules: recursive
+      # https://cmake.org/cmake/help/latest/manual/cmake-presets.7.html#schema
+      # A machine-readable JSON schema for the CMakePresets.json format.
+      - run: curl -O https://cmake.org/cmake/help/latest/_downloads/3e2d73bff478d88a7de0de736ba5e361/schema.json
+      - run: pip3 install jsonschema
+      - name: Check JSON schema of the CMakePresets.json
+        run: jsonschema -i CMakePresets.json schema.json
       - name: Install deps
         uses: ./.github/actions/install-deps-debian
       - name: test
