cmake: introduce a fake target copy_tests
The commit 8b28a03f7eab ("cmake: copying luzer-based tests to
a single dir") introduced a target `copy_tests` that is used by
build script in OSS Fuzz for running Lua fuzzing tests. Most part
of commits required for Lua fuzzing testing is missed in 3.5 and
it is not desired to backporting all of them. The patch fixes
fuzzing testing in 3.5 by introducing a fake target `copy_tests`
that is NOOP.

NO_CHANGELOG=build
NO_DOC=build
NO_TEST=build

--- a/test/fuzz/lua/CMakeLists.txt
+++ b/test/fuzz/lua/CMakeLists.txt
@@ -52,6 +52,11 @@ set_tests_properties(
     DEPENDS ${TEST_SUITE_NAME}-deps
 )
 
+if(OSS_FUZZ)
+  set(LUZER_TESTS_DIR ${CMAKE_BINARY_DIR}/luzer_tests)
+  file(MAKE_DIRECTORY ${LUZER_TESTS_DIR})
+endif()
+
 function(create_luzer_test)
   cmake_parse_arguments(
     FUZZ
@@ -99,3 +104,8 @@ endif()
 
 # Requires LUZER_LUA_CPATH and LUZER_LUA_PATH.
 include(BuildLuaTests)
+
+# Needed for OSS Fuzz.
+add_custom_target(copy_tests
+  COMMENT "Nothing is copied, Lua-based testing is not supported"
+)
