ci: add http lua module
Add tarantool/http 1.9.0

NO_DOC=tests
NO_CHANGELOG=tests
NO_TEST=ci

--- a/.github/actions/install-deps-debian/action.yml
+++ b/.github/actions/install-deps-debian/action.yml
@@ -37,5 +37,6 @@ runs:
         && rm cmake-3.26.0-linux-$(uname -i).tar.gz
         tt rocks install luatest 1.4.0
         tt rocks install luacheck 0.26.0
+        tt rocks install http 1.9.0
         gem install coveralls-lcov
       shell: bash
