--- a/test/fuzz/CMakeLists.txt
+++ b/test/fuzz/CMakeLists.txt
@@ -208,3 +208,8 @@ add_subdirectory(sql_fuzzer)
 add_custom_target(fuzzers
                   DEPENDS ${FUZZ_TEST_TARGETS} lua-tests
                   COMMENT "Build fuzzers")
+
+# Needed for OSS Fuzz.
+add_custom_target(copy_tests
+  COMMENT "Nothing is copied, Lua-based testing is not supported"
+)
