cmake: fix fuzzing in OSS Fuzz
Build script in OSS Fuzz has steps (introduced in the PR [1])
that requires changes that are absent in release/3.2 and the build
became broken:

NO_WRAP
+ unset OSS_FUZZ
+ cp build/test/fuzz/lua-tests/src/tests/lapi/lib.lua /github/workspace/build-out
cp: cannot stat 'build/test/fuzz/lua-tests/src/tests/lapi/lib.lua': No such file or directory
2026-01-29 08:56:31,745 - root - ERROR - Building fuzzers failed.
NO_WRAP

The patch fixes broken build by creating a file
`build/test/fuzz/lua-tests/src/tests/lapi/lib.lua` and a fake
target `copy_tests`.

1. https://github.com/google/oss-fuzz/pull/14656

NO_CHANGELOG=build
NO_DOC=build
NO_TEST=build

--- a/test/fuzz/CMakeLists.txt
+++ b/test/fuzz/CMakeLists.txt
@@ -172,3 +172,8 @@ endif()
 add_custom_target(fuzzers
                   DEPENDS ${FUZZ_TEST_TARGETS} lua-tests
                   COMMENT "Build fuzzers")
+
+# Needed for OSS Fuzz.
+add_custom_target(copy_tests
+  COMMENT "Nothing is copied, Lua-based testing is not supported"
+)
