fuzzing workflow without full-ci label
Fixes #
Closes #
Needed for #
See also #

NO_CHANGELOG=internal
NO_DOC=internal
NO_TEST=internal

--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -43,9 +43,9 @@ jobs:
   fuzzing:
     # Run on push to the 'master' and release branches of tarantool/tarantool
     # or on pull request if the 'full-ci' label is set.
-    if: github.repository == 'tarantool/tarantool' &&
-        ( github.event_name != 'pull_request' ||
-          contains(github.event.pull_request.labels.*.name, 'full-ci') )
+    # if: github.repository == 'tarantool/tarantool' &&
+    #     ( github.event_name != 'pull_request' ||
+    #       contains(github.event.pull_request.labels.*.name, 'full-ci') )
 
     runs-on: ubuntu-latest
 
