cmake: disable building sql_fuzzer and lua_fuzzer
Fixes #
Closes #
Needed for #
See also #

NO_CHANGELOG=internal
NO_DOC=internal
NO_TEST=internal

--- a/test/fuzz/CMakeLists.txt
+++ b/test/fuzz/CMakeLists.txt
@@ -204,8 +204,8 @@ endif ()
 
 include(ProtobufMutator)
 
-add_subdirectory(luaL_loadbuffer)
-add_subdirectory(sql_fuzzer)
+# add_subdirectory(luaL_loadbuffer)
+# add_subdirectory(sql_fuzzer)
 add_subdirectory(lua)
 
 add_custom_target(fuzzers
