box: introduce application threads
The number of application threads started by Tarantool is configured by
the new box configuration option app_threads. Once configured, it can't
be changed. Each application thread is running an independent event loop
Currently, there's no way to use the threads. In the following patches
we'll connect them to IPROTO and let clients run Lua code in them using
IPROTO_CALL and IPROTO_EVAL.

Part of #12259

NO_DOC=internal
NO_CHANGELOG=internal

--- a/src/box/CMakeLists.txt
+++ b/src/box/CMakeLists.txt
@@ -180,6 +180,7 @@ set(box_sources
     allocator.cc
     memtx_allocator.cc
     msgpack.c
+    app_threads.c
     iproto.cc
     xrow_io.cc
     tuple_convert.c
