--- a/src/box/CMakeLists.txt
+++ b/src/box/CMakeLists.txt
@@ -392,6 +392,6 @@ add_custom_command(OUTPUT ${SQL_BIN_DIR}/opcodes.c
         ${SQL_BIN_DIR}/opcodes.h)
 
 target_link_libraries(box box_error tuple xrow xlog vclock digest raft
-    node_name ${common_libraries} ${EXTRA_BOX_LINK_LIBRARIES})
+    node_name ${common_libraries} ${EXTRA_BOX_LINK_LIBRARIES} lz4)
 
 add_dependencies(box build_bundled_libs generate_sql_files)
