--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "third_party/metrics"]
 	path = third_party/metrics
 	url = https://github.com/tarantool/metrics.git
+[submodule "third_party/metrics-export-role"]
+	path = third_party/metrics-export-role
+	url = https://github.com/tarantool/metrics-export-role.git
