--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,7 @@ lua_source(lua_sources lua/dobytecode.lua dobytecode_lua)
 lua_source(lua_sources lua/dojitcmd.lua dojitcmd_lua)
 lua_source(lua_sources lua/string.lua string_lua)
 lua_source(lua_sources lua/fiber.lua fiber_lua)
+lua_source(lua_sources lua/asan.lua asan_lua)
 lua_source(lua_sources lua/buffer.lua buffer_lua)
 lua_source(lua_sources lua/ulid.lua ulid_lua)
 lua_source(lua_sources lua/uuid.lua uuid_lua)
